@@ -9,20 +9,22 @@ namespace osu.XR.Components.Panels {
 	public class XrNotificationPanel : FlatPanel, IHasName, IHasIcon {
 		[Resolved]
 		private OsuGameXr Game { get; set; }
-		NotificationPanel notifications = new NotificationPanel();
+		NotificationPanel notifications = new() { Height = 500, Width = 400 };
 
 		public XrNotificationPanel () {
 			PanelAutoScaleAxes = Axes.X;
 			PanelHeight = 0.5;
-			RelativeSizeAxes = Axes.None;
+			RelativeSizeAxes = Axes.X;
 			Height = 500;
 			AutosizeX();
 			Source.Add( notifications );
-			this.Hide();
 		}
 
-		public void Post ( Notification notification )
-			=> notifications.Post( notification );
+		public void PostMessage ( Notification notification )
+			=> notifications.PostMessage( notification );
+
+		public void PostError ( Notification notification )
+			=> notifications.PostError( notification );
 
 		public string DisplayName => "Notifications";
 
