@@ -1,16 +1,31 @@
-﻿using osu.Game.Overlays;
+﻿using osu.Framework.Graphics;
+using osu.Framework.Graphics.Containers;
+using osu.Game.Graphics.UserInterface;
+using osu.Game.Overlays;
+using osu.Game.Overlays.Notifications;
 
 namespace osu.XR.Drawables {
-	public class NotificationPanel : NotificationOverlay {
+	public class NotificationPanel : ConfigurationContainer {
 		public NotificationPanel () {
-			
+			Title = "Notifications";
+			Description = "messages and stuff";
+
+			messageContainer = new NotificationSection( "Messages", "Clear all" );
+			errorContainer = new NotificationSection( "Errors", "Clear all" );
+
+			AddSection( errorContainer );
+			AddSection( messageContainer );
 		}
 
-		protected override bool StartHidden => true;
+		NotificationSection messageContainer;
+		NotificationSection errorContainer;
 
-		protected override void LoadComplete () {
-			base.LoadComplete();
-			Hide();
+		public void PostMessage ( Notification notification ) {
+			messageContainer.Add( notification, 0 );
+		}
+
+		public void PostError ( Notification notification ) {
+			errorContainer.Add( notification, 0 );
 		}
 	}
 }
